References: MDEV-4211 - appended format description event for TOI replication write set, FD carries binlog checksum algorithm